sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:16: error: ';' expected but 'else' found.
    else {if (c == BLANC) {echange(Blanc,Bleu);Blanc -=1}
    ^DutchFlagAlgo:21: error: Unmatched closing brace '}' ignored here
}
^